# Claire-Continued

./: (1)claire_project_tree.txt  .claire_version.bak_20260506_170125  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.bat  LAUNCH_CLAIRE.bat  LAUNCH_PLATFORM.bat  LICENSE  PORTABLE_README.md  README.md  START_CLAIRE.bat  START_CLAIRE_DESKTOP.bat  START_CLAIRE_LIVE.bat  START_CLAIRE_LIVE_SAFE.bat  START_CLAIRE_PORTABLE.bat  START_CLAIRE_PORTABLE_SAFE.bat  audit_compileall.txt  audit_deleted_files_before_restore.txt  audit_git_diff_name_status_before_commit.txt  audit_git_status_before_commit.txt  audit_modified_files_before_commit.txt  claire-syntalion-enhanced.html  claire_build_manifest.json  claire_full_diagnostic.txt  claire_launcher_audit.txt  claire_v10.3.1_evolution_governance_installer.py  diagnostic_runner.py  main.py  pyproject.toml  pytest.ini  pytest_runtime.ini  requirements.txt  sync_claire_desktop.ps1  v5_92_dryrun.txt  v5_92_pytest_errors.txt  version.json  version_16_25_clean_install_recovery.json
.claire_install/: install_registry.json  path_approvals.json
.claire_install_backup/: install_registry_before_v6_fix.json  path_approvals_before_v6_fix.json
.claire_install_logs/: completion_07a112e07e47_phase_1.json  completion_07a112e07e47_phase_10.json  completion_07a112e07e47_phase_2.json  completion_07a112e07e47_phase_3.json  completion_07a112e07e47_phase_4.json  completion_07a112e07e47_phase_5.json  completion_07a112e07e47_phase_6.json  completion_07a112e07e47_phase_7.json  completion_07a112e07e47_phase_8.json  completion_07a112e07e47_phase_9.json  completion_07a112e07e47_postflight.json  completion_07a112e07e47_preflight.json  install_20260506_042848_evo_gov_5d394f869d1b.json  install_20260506_114228_v10.3.2_e48c212f2632.json  install_v10.3.1_20260506_051702.json  v10_0_0_audit.json  v10_1_0_audit.json  v10_2_0_audit.json  v6_0_0_audit.json  v6_1_0_audit.json  v6_2_0_audit.json  v6_3_0_audit.json  v6_4_0_audit.json  v7_0_0_audit.json  v7_1_0_audit.json  v7_2_0_audit.json  v7_3_0_audit.json  v8_0_0_audit.json  v8_1_0_audit.json  v8_2_0_audit.json  v8_3_0_audit.json  v9_0_0_audit.json  v9_1_0_audit.json  v9_2_0_audit.json
Claire Diagrams and Architectures/: (1)Claire-5-Layer-Architecture.html  (2)Claire-ACS2-Intelligence-Loops.html  (3)Claire-30-Stage-Lifecycle.html  (4)Claire-Route-Selection.html  (5)Claire-Version-Timeline.html  (6)Claire-Master-System-Diagram.html  (7)Claire-Complete-Systems-Flow .html
Docs Backup/: 10.9-11.0.txt  BEFORE_STABILIZATION_benchmark_files.txt  BEFORE_STABILIZATION_git_status.txt  Best Architecture.txt  (+57 more)
(+8361 files in other folders)
