[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claire-syntalion"
version = "4.0.0"
description = "Claire Syntalion — Sovereign Autonomous R&D Enterprise Platform"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [{name = "Craig Morris"}]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "httpx>=0.24.0"
]

[project.scripts]
claire = "claire.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["claire*", "backend*"]
exclude = ["src*", "old_backend*", "quarantine*", "frontend*", "tests*"]