[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governed-intelligence-platform"
version = "4.0.0"
description = "Governed intelligence platform"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [{name = "Craig Morris"}]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "httpx>=0.24.0"
]

[project.scripts]
platform-runtime = "runtime_core.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime_core*", "backend*"]
exclude = ["src*", "old_backend*", "quarantine*", "frontend*", "tests*"]
